maximum work completed of top nav

--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.favList {
+  border-color: transparent transparent #f9fafb transparent;
+}
